--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Italian poetry'
 - !lcc 'PQ'
+- GITenberg
 title: Fatalità
 url: http://www.gutenberg.org/ebooks/36239
